# efiboot-generator

./: README.md  pyproject.toml
efiboot_generator/: __init__.py  efibootmgr.py  main.py
