[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "efiboot-generator"
version = "0.0.2"
authors = [
  { name="Denis", email="strdenis02@gmail.com" },
]
description = "Automate EFI entries generation with efibootmgr"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
]

dependencies = []

[project.scripts]
efiboot-generator = "efiboot_generator.main:main"

[project.urls]
Homepage = "https://github.com/denisstrizhkin/efiboot-generator"
Issues = "https://github.com/denisstrizhkin/efiboot-generator/issues"

[tool.black]
line-length = 80
